--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
@@ -10,7 +10,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "electron": "^36.3.2"
+    "electron": "^36.3.2",
+    "rss-parser": "^3.13.0"
   },
   "dependencies": {
     "electron-reload": "^2.0.0-alpha.1"
